@@ -403,14 +403,14 @@ public class WikiUtil {
 		String topic = retrieveDirectoriesFromURI(request, 1);
 		if (topic == null) {
 			// may be the root URL, ie: http://example.com/wiki/en/
-			logger.info("No topic in URL: " + request.getRequestURI());
+			logger.debug("No topic in URL: " + request.getRequestURI());
 			return null;
 		}
 		int pos = topic.indexOf('#');
 		if (pos != -1) {
 			// strip everything after and including '#'
 			if (pos == 0) {
-				logger.warn("No topic in URL: " + request.getRequestURI());
+				logger.debug("No topic in URL: " + request.getRequestURI());
 				return null;
 			}
 			topic = topic.substring(0, pos);
@@ -419,7 +419,7 @@ public class WikiUtil {
 		if (pos != -1) {
 			// strip everything after and including '?'
 			if (pos == 0) {
-				logger.warn("No topic in URL: " + request.getRequestURI());
+				logger.debug("No topic in URL: " + request.getRequestURI());
 				return null;
 			}
 			topic = topic.substring(0, pos);
@@ -428,7 +428,7 @@ public class WikiUtil {
 		if (pos != -1) {
 			// some servlet containers return parameters of the form ";jsessionid=1234" when getRequestURI is called.
 			if (pos == 0) {
-				logger.warn("No topic in URL: " + request.getRequestURI());
+				logger.debug("No topic in URL: " + request.getRequestURI());
 				return null;
 			}
 			topic = topic.substring(0, pos);
