@@ -20,47 +20,47 @@
 <div id="edit-toolbar" class="hidden">
 	<span class="toolbar-group">
 		<fmt:message key="edit.button.bold" var="toolbarButtonText" />
-		<span class="toolbar-button"><a id="button-bold" title="<c:out value="${toolbarButtonText}" />" href="#" title=""><span class="toolbar-icon">&#160;</span></a></span>
+		<span class="toolbar-button"><a id="button-bold" title="<c:out value="${toolbarButtonText}" />" href="#"><span class="toolbar-icon">&#160;</span></a></span>
 		<fmt:message key="edit.button.italic" var="toolbarButtonText" />
-		<span class="toolbar-button"><a id="button-italic" title="<c:out value="${toolbarButtonText}" />" href="#" title=""><span class="toolbar-icon">&#160;</span></a></span>
+		<span class="toolbar-button"><a id="button-italic" title="<c:out value="${toolbarButtonText}" />" href="#"><span class="toolbar-icon">&#160;</span></a></span>
 		<fmt:message key="edit.button.underline" var="toolbarButtonText" />
-		<span class="toolbar-button"><a id="button-underline" title="<c:out value="${toolbarButtonText}" />" href="#" title=""><span class="toolbar-icon">&#160;</span></a></span>
+		<span class="toolbar-button"><a id="button-underline" title="<c:out value="${toolbarButtonText}" />" href="#"><span class="toolbar-icon">&#160;</span></a></span>
 		<fmt:message key="edit.button.strike" var="toolbarButtonText" />
-		<span class="toolbar-button"><a id="button-strike" title="<c:out value="${toolbarButtonText}" />" href="#" title=""><span class="toolbar-icon">&#160;</span></a></span>
+		<span class="toolbar-button"><a id="button-strike" title="<c:out value="${toolbarButtonText}" />" href="#"><span class="toolbar-icon">&#160;</span></a></span>
 		<fmt:message key="edit.button.subscript" var="toolbarButtonText" />
-		<span class="toolbar-button"><a id="button-subscript" title="<c:out value="${toolbarButtonText}" />" href="#" title=""><span class="toolbar-icon">&#160;</span></a></span>
+		<span class="toolbar-button"><a id="button-subscript" title="<c:out value="${toolbarButtonText}" />" href="#"><span class="toolbar-icon">&#160;</span></a></span>
 		<fmt:message key="edit.button.superscript" var="toolbarButtonText" />
-		<span class="toolbar-button"><a id="button-superscript" title="<c:out value="${toolbarButtonText}" />" href="#" title=""><span class="toolbar-icon">&#160;</span></a></span>
+		<span class="toolbar-button"><a id="button-superscript" title="<c:out value="${toolbarButtonText}" />" href="#"><span class="toolbar-icon">&#160;</span></a></span>
 		<fmt:message key="edit.button.nowiki" var="toolbarButtonText" />
-		<span class="toolbar-button"><a id="button-nowiki" title="<c:out value="${toolbarButtonText}" />" href="#" title=""><span class="toolbar-icon">&#160;</span></a></span>
+		<span class="toolbar-button"><a id="button-nowiki" title="<c:out value="${toolbarButtonText}" />" href="#"><span class="toolbar-icon">&#160;</span></a></span>
 	</span>
 	<span class="toolbar-group">
 		<fmt:message key="edit.button.ordered.list" var="toolbarButtonText" />
-		<span class="toolbar-button"><a id="button-orderedlist" title="<c:out value="${toolbarButtonText}" />" href="#" title=""><span class="toolbar-icon">&#160;</span></a></span>
+		<span class="toolbar-button"><a id="button-orderedlist" title="<c:out value="${toolbarButtonText}" />" href="#"><span class="toolbar-icon">&#160;</span></a></span>
 		<fmt:message key="edit.button.unordered.list" var="toolbarButtonText" />
-		<span class="toolbar-button"><a id="button-unorderedlist" title="<c:out value="${toolbarButtonText}" />" href="#" title=""><span class="toolbar-icon">&#160;</span></a></span>
+		<span class="toolbar-button"><a id="button-unorderedlist" title="<c:out value="${toolbarButtonText}" />" href="#"><span class="toolbar-icon">&#160;</span></a></span>
 		<fmt:message key="edit.button.indent" var="toolbarButtonText" />
-		<span class="toolbar-button"><a id="button-indent" title="<c:out value="${toolbarButtonText}" />" href="#" title=""><span class="toolbar-icon">&#160;</span></a></span>
+		<span class="toolbar-button"><a id="button-indent" title="<c:out value="${toolbarButtonText}" />" href="#"><span class="toolbar-icon">&#160;</span></a></span>
 	</span>
 	<span class="toolbar-group">
 		<fmt:message key="edit.button.internal.link" var="toolbarButtonText" />
-		<span class="toolbar-button"><a id="button-wikilink" title="<c:out value="${toolbarButtonText}" />" href="#" title=""><span class="toolbar-icon">&#160;</span></a></span>
+		<span class="toolbar-button"><a id="button-wikilink" title="<c:out value="${toolbarButtonText}" />" href="#"><span class="toolbar-icon">&#160;</span></a></span>
 		<fmt:message key="edit.button.external.link" var="toolbarButtonText" />
-		<span class="toolbar-button"><a id="button-link" title="<c:out value="${toolbarButtonText}" />" href="#" title=""><span class="toolbar-icon">&#160;</span></a></span>
+		<span class="toolbar-button"><a id="button-link" title="<c:out value="${toolbarButtonText}" />" href="#"><span class="toolbar-icon">&#160;</span></a></span>
 		<fmt:message key="edit.button.image" var="toolbarButtonText" />
-		<span class="toolbar-button"><a id="button-image" title="<c:out value="${toolbarButtonText}" />" href="#" title=""><span class="toolbar-icon">&#160;</span></a></span>
+		<span class="toolbar-button"><a id="button-image" title="<c:out value="${toolbarButtonText}" />" href="#"><span class="toolbar-icon">&#160;</span></a></span>
 		<fmt:message key="edit.button.signature" var="toolbarButtonText" />
-		<span class="toolbar-button"><a id="button-signature" title="<c:out value="${toolbarButtonText}" />" href="#" title=""><span class="toolbar-icon">&#160;</span></a></span>
+		<span class="toolbar-button"><a id="button-signature" title="<c:out value="${toolbarButtonText}" />" href="#"><span class="toolbar-icon">&#160;</span></a></span>
 		<fmt:message key="edit.button.line" var="toolbarButtonText" />
-		<span class="toolbar-button"><a id="button-hr" title="<c:out value="${toolbarButtonText}" />" href="#" title=""><span class="toolbar-icon">&#160;</span></a></span>
+		<span class="toolbar-button"><a id="button-hr" title="<c:out value="${toolbarButtonText}" />" href="#"><span class="toolbar-icon">&#160;</span></a></span>
 	</span>
 	<span class="toolbar-group">
 		<fmt:message key="edit.button.head1" var="toolbarButtonText" />
-		<span class="toolbar-button"><a id="button-heading1" title="<c:out value="${toolbarButtonText}" />" href="#" title=""><span class="toolbar-icon">&#160;</span></a></span>
+		<span class="toolbar-button"><a id="button-heading1" title="<c:out value="${toolbarButtonText}" />" href="#"><span class="toolbar-icon">&#160;</span></a></span>
 		<fmt:message key="edit.button.head2" var="toolbarButtonText" />
-		<span class="toolbar-button"><a id="button-heading2" title="<c:out value="${toolbarButtonText}" />" href="#" title=""><span class="toolbar-icon">&#160;</span></a></span>
+		<span class="toolbar-button"><a id="button-heading2" title="<c:out value="${toolbarButtonText}" />" href="#"><span class="toolbar-icon">&#160;</span></a></span>
 		<fmt:message key="edit.button.head3" var="toolbarButtonText" />
-		<span class="toolbar-button"><a id="button-heading3" title="<c:out value="${toolbarButtonText}" />" href="#" title=""><span class="toolbar-icon">&#160;</span></a></span>
+		<span class="toolbar-button"><a id="button-heading3" title="<c:out value="${toolbarButtonText}" />" href="#"><span class="toolbar-icon">&#160;</span></a></span>
 	</span>
 </div>
 
